Fixed dark mode, added credits, finished gallery, added trivia quiz, fixed buttons, various debugging

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -22,20 +22,29 @@ body.main-darkmode {
     background-image: url("../Images/background-extended.png"), url("../Images/background-extender.png");
     background-repeat: no-repeat, repeat;
     background-size: 100%;
+    background-color: #080607;
 }
 
-body#gallery-background {
+body.gallery-background {
+    margin: 0px;
+    border-left: 0.2rem solid #290029;
+    border-right: 0.2rem solid #290029;
+    border-bottom: 0.2rem solid #290029;
+    background-position: bottom left;
+    background-image: url("../Images/background-extended-light.png");
+    background-color: #93c2dc;
+    background-repeat: no-repeat, repeat;
+    background-size: 100%;
+}
+body.gallery-darkmode {
     margin: 0px;
     border-left: 0.2rem solid #290029;
     border-right: 0.2rem solid #290029;
     border-bottom: 0.2rem solid #290029;
     background-position: bottom;
-    background-image: url("../Images/background-extended-light.png");
+    background-image: url("../Images/background-extended.png");
     background-size: auto;
     background-repeat: no-repeat;
-    background-color: #92C1DB;
-}
-body#gallery-darkmode {
     margin: 0px;
     background-color: #000000;
 }
@@ -72,7 +81,7 @@ a#menu{
     display: inline-block;
     *display: inline;
     zoom: 1;
-    width: 33%;
+    width: 24%;
     text-align: center;
     font-family: SFCartoonistHand;
 }
@@ -84,7 +93,7 @@ a#navbar{
     display: inline-block;
     *display: inline;
     zoom: 1;
-    width: 33%;
+    width: 24%;
     text-align: center;
     font-family: SFCartoonistHand;
 }
@@ -94,7 +103,7 @@ button#button{
     display: inline-block;
     *display: inline;
     zoom: 1;
-    width: 32%;
+    width: 24%;
     text-align: center  
 }
 button#button-darkmode{
@@ -103,7 +112,7 @@ button#button-darkmode{
     display: inline-block;
     *display: inline;
     zoom: 1;
-    width: 32%;
+    width: 24%;
     text-align: center;
     background-color: black;
     color: white;
@@ -131,7 +140,7 @@ a#menu-darkmode{
     display: inline-block;
     *display: inline;
     zoom: 1;
-    width: 33%;
+    width: 24%;
     text-align: center;
 }
 a#navbar-darkmode{
@@ -141,7 +150,7 @@ a#navbar-darkmode{
     display: inline-block;
     *display: inline;
     zoom: 1;
-    width: 33%;
+    width: 24%;
     text-align: center;
 }
 
@@ -181,7 +190,7 @@ p#paragraph0{
     text-align: center;
     font-size: 300%;
     margin: 0.7rem;
-    margin-bottom: 2rem;
+    margin-bottom: 0px;
     font-family: 'Times New Roman', Times, serif;
 }
 
@@ -225,6 +234,17 @@ p#paragraph2{
     background-color: rgba(255,255,255,0.9);
     font-family: SFCartoonistHand;
 }
+p#paragraph3{
+    font-size: 340%;
+    max-width: 50%;
+    margin: 1.8rem;
+    padding: 0.2rem;
+    border: 0.3rem solid #250025;
+    border-radius: 1rem;
+    background-color: rgba(255,255,255,0.9);
+    font-family: SFCartoonistHand;
+    text-align: center;
+}
 
 p#paragraph2-darkmode{
     float: left;
@@ -256,8 +276,8 @@ p#paragraph0-darkmode{
     text-align: center;
     font-size: 300%;
     margin: 0.7rem;
+    margin-bottom: 0px;
     color: white;
-    margin-bottom: 2rem;
     font-family: 'Times New Roman', Times, serif;
 }
 
@@ -286,11 +306,54 @@ p#paragraph0-darkmode{
 }
 
 .main-content{
-    background-image: url("../Images/background-light.png");
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .main-container{
-    background-image: url("../Images/background-extender-light.png");
+    margin: 0px;
+    border-left: 0.2rem solid #290029;
+    border-right: 0.2rem solid #290029;
+    border-bottom: 0.2rem solid #290029;
+    background-position: bottom left;
+    background-image: url("../Images/background-extended-light.png"), url("../Images/background-extender-light.png");
+    background-color: #93c2dc;
+    background-repeat: no-repeat, repeat;
+    background-size: 100%;
+}
+.main-container-darkmode{
+    margin: 0px;
+    border-left: 0.2rem solid #290029;
+    border-right: 0.2rem solid #290029;
+    border-bottom: 0.2rem solid #290029;
+    background-position: bottom left;
+    background-image: url("../Images/background-extended.png"), url("../Images/background-extender.png");
+    background-color: #080607;
+    background-repeat: no-repeat, repeat;
+    background-size: 100%;
+}
+
+.main-container1{
+    margin: 0px;
+    border-left: 0.2rem solid #290029;
+    border-right: 0.2rem solid #290029;
+    border-bottom: 0.2rem solid #290029;
+    background-position: bottom left;
+    background-image: url("Images/transparent-background.png");
+    background-color: #93c2dc;
+    background-repeat: no-repeat, repeat;
+    background-size: 100%;
+}
+
+.main-container1-darkmode{
+    margin: 0px;
+    border-left: 0.2rem solid #290029;
+    border-right: 0.2rem solid #290029;
+    border-bottom: 0.2rem solid #290029;
+    background-position: bottom left;
+    background-image: url("../Images/background-extender.png");
+    background-color: #080607;
+    background-repeat: no-repeat, repeat;
+    background-size: 100%;
 }
 
 .flex-container{
